update: tawk to widget

--- a/index.html
+++ b/index.html
@@ -1,27 +1,124 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>justlinkwebapp</title>
+
+    <title>
+      JustLink Logistics Limited | Fast & Reliable Delivery in Lagos, Nigeria
+    </title>
+
+    <!-- Primary Meta Tags -->
+    <meta
+      name="title"
+      content="JustLink Logistics Limited | Fast & Reliable Delivery in Lagos, Nigeria"
+    />
+    <meta
+      name="description"
+      content="JustLink Logistics Limited offers fast, secure, and affordable logistics and delivery services across Lagos and Nigeria. From same-day dispatch to interstate haulage, we ensure your packages arrive on time, every time."
+    />
+    <meta
+      name="keywords"
+      content="logistics company Lagos, delivery services Nigeria, courier Lagos, JustLink Logistics, haulage, same-day delivery, parcel delivery Lagos, freight forwarding Nigeria, transport company Lagos"
+    />
+    <meta name="author" content="JustLink Logistics Limited" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://justlinklogistics.com.ng/" />
+    <meta
+      property="og:title"
+      content="JustLink Logistics Limited | Fast & Reliable Delivery in Lagos"
+    />
+    <meta
+      property="og:description"
+      content="We provide reliable logistics and delivery services across Lagos and Nigeria. Trust JustLink Logistics to move your business forward."
+    />
+    <meta
+      property="og:image"
+      content="https://justlinklogistics.com.ng/og-image.jpg"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://justlinklogistics.com.ng/" />
+    <meta
+      property="twitter:title"
+      content="JustLink Logistics Limited | Fast & Reliable Delivery in Lagos"
+    />
+    <meta
+      property="twitter:description"
+      content="Reliable logistics, haulage, and courier services across Lagos and Nigeria. Fast, safe, and affordable — powered by JustLink Logistics."
+    />
+    <meta
+      property="twitter:image"
+      content="https://justlinklogistics.com.ng/og-image.jpg"
+    />
+
+    <!-- Local SEO -->
+    <meta name="geo.region" content="NG-LA" />
+    <meta name="geo.placename" content="Lagos" />
+    <meta name="geo.position" content="6.5244;3.3792" />
+    <meta name="ICBM" content="6.5244, 3.3792" />
+
+    <!-- Theme & App -->
+    <meta name="theme-color" content="#006838" />
+    <link rel="apple-touch-icon" href="/favicon.ico" />
+
+    <!-- Structured Data for Google (Local Business Schema) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LogisticsBusiness",
+        "name": "JustLink Logistics Limited",
+        "image": "https://justlinklogistics.com.ng/og-image.jpg",
+        "@id": "https://justlinklogistics.com.ng/",
+        "url": "https://justlinklogistics.com.ng/",
+        "telephone": "+234-913-328-6601",
+        "priceRange": "$$",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "16 FEMI DARAMOLA STREET, OFF NIYI ROAD, CELE EGBE BUS STOP, LAGOS, NIGERIA",
+          "addressLocality": "Lagos",
+          "addressRegion": "LA",
+          "postalCode": "100001",
+          "addressCountry": "NG"
+        },
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": 6.5244,
+          "longitude": 3.3792
+        },
+        "openingHours": "Mo-Fr 08:00-18:00",
+        "sameAs": [
+          "https://www.instagram.com/justlinklogistics",
+          "https://www.facebook.com/justlinklogistics",
+          "https://www.linkedin.com/company/justlinklogistics"
+        ]
+      }
+    </script>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
 
     <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/692f0da9c8578219807085f4/1jbfsqofh';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
+    <script type="text/javascript">
+      var Tawk_API = Tawk_API || {},
+        Tawk_LoadStart = new Date();
+      (function () {
+        var s1 = document.createElement("script"),
+          s0 = document.getElementsByTagName("script")[0];
+        s1.async = true;
+        s1.src = "https://embed.tawk.to/695b87a0eb7ad2198196d2b0/1je6ojjhe";
+        s1.charset = "UTF-8";
+        s1.setAttribute("crossorigin", "*");
+        s0.parentNode.insertBefore(s1, s0);
+      })();
+    </script>
+    <!--End of Tawk.to Script-->
   </body>
 </html>
